update profile page

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
     "googleapis": "^161.0.0",
+    "ical.js": "^2.2.1",
     "little-date": "^1.0.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.525.0",
@@ -102,6 +103,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.63.0",
     "recharts": "^2.15.4",
     "server-only": "^0.0.1",
